--- a/2.TarjetaProducto/Estilos.css
+++ b/2.TarjetaProducto/Estilos.css
@@ -3,3 +3,13 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.tarjeta{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: tomato;
+    width: 300px;
+    height: 330px;
+    padding: 10px;
+}
