--- a/2.TarjetaProducto/Estilos.css
+++ b/2.TarjetaProducto/Estilos.css
@@ -12,4 +12,18 @@
     width: 300px;
     height: 330px;
     padding: 10px;
+    margin: 20px;
+}
+
+.main{
+    display: flex;
+    justify-content: center;
+}
+
+.boton{
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 50px;
+    height: 30px;
+    font-size: 15px;
 }
