--- a/7.Testimonial/Estilos.css
+++ b/7.Testimonial/Estilos.css
@@ -5,9 +5,9 @@
 }
 
 h1{
-    font-size: 2.5rem;
+    font-size: 3rem;
     text-align: center;
-    margin-bottom: 50px;
+    margin: 50px;
 }
 
 .contenedor{
@@ -17,6 +17,18 @@ h1{
 
 .contenedor-variante{
     width: 80%;
+}
+
+.contenedor__texto{
+    padding: 40px;
+}
+
+h2,h3{
+    font-size: 2rem;
+}
+
+p{
+    font-size: 1.5rem;
 }
 
 .imagen{
